# nelson

./: .gitignore  CMakeBaseBuildSystem.cmake  CMakeLists.txt  Readme.md  mat.cmake
nelson/: BaseSection.cpp  BaseSection.h  CMakeLists.txt  DoubleSection.cpp  DoubleSection.h  DoubleSection.hpp  DoubleSectionHessian.cpp  DoubleSectionHessian.h  DoubleSectionHessian.hpp  DoubleSectionHessianMatrices.h  DoubleSectionHessianMatrices.hpp  EdgeBNary.cpp  EdgeBNary.h  EdgeBNary.hpp  EdgeBinary.cpp  EdgeBinary.h  EdgeBinary.hpp  EdgeInterface.cpp  EdgeInterface.h  EdgeNary.cpp  EdgeNary.h  EdgeNary.hpp  EdgeSectionBase.cpp  EdgeSectionBase.h  EdgeSectionBase.hpp  EdgeSingleSectionBase.cpp  EdgeSingleSectionBase.h  EdgeSingleSectionBase.hpp  EdgeUnary.cpp  EdgeUnary.h  EdgeUnary.hpp  GaussNewton.cpp  GaussNewton.h  GaussNewton.hpp  Global.cpp  Global.h  LevenbergMarquardt.cpp  LevenbergMarquardt.h  LevenbergMarquardt.hpp  MatrixDenseWrapper.cpp  (+47 more)
nelson/samples/: BASchurPerfomances.cpp  CMakeLists.txt  Problems.cpp  Problems.h  TestSetUnorderedSetPerformances.cpp  VinvMultPerformances.cpp  WVinvMultPerformances.cpp  WWtMultPerformances.cpp  WtXMultPerformances.cpp  nelsonPlayground.cpp
nelson/tests/: CMakeLists.txt  testDoubleSectionCommon.h  testDoubleSectionCommon.hpp  testDoubleSectionHessian.cpp  testDoubleSectionSchurCommon.h  testDoubleSectionSchurCommon.hpp  testDoubleSectionSchurDiagBlock.cpp  testDoubleSectionSchurDiagBlockDDDD.cpp  testDoubleSectionSchurDiagBlockDDDF.cpp  testDoubleSectionSchurDiagBlockDDFD.cpp  testDoubleSectionSchurDiagBlockDDFF.cpp  testDoubleSectionSchurDiagBlockDFDD.cpp  testDoubleSectionSchurDiagBlockDFDF.cpp  testDoubleSectionSchurDiagBlockDFFD.cpp  testDoubleSectionSchurDiagBlockDFFF.cpp  testDoubleSectionSchurDiagBlockDVDD.cpp  testDoubleSectionSchurDiagBlockDVDF.cpp  testDoubleSectionSchurDiagBlockDVFD.cpp  testDoubleSectionSchurDiagBlockDVFF.cpp  testDoubleSectionSchurDiagBlockFDDD.cpp  testDoubleSectionSchurDiagBlockFDDF.cpp  testDoubleSectionSchurDiagBlockFDFD.cpp  testDoubleSectionSchurDiagBlockFDFF.cpp  testDoubleSectionSchurDiagBlockFFDD.cpp  testDoubleSectionSchurDiagBlockFFDF.cpp  testDoubleSectionSchurDiagBlockFFFD.cpp  testDoubleSectionSchurDiagBlockFFFF.cpp  testDoubleSectionSchurDiagBlockFVDD.cpp  testDoubleSectionSchurDiagBlockFVDF.cpp  testDoubleSectionSchurDiagBlockFVFD.cpp  testDoubleSectionSchurDiagBlockFVFF.cpp  testDoubleSectionSchurDiagBlockVDDD.cpp  testDoubleSectionSchurDiagBlockVDDF.cpp  testDoubleSectionSchurDiagBlockVDFD.cpp  testDoubleSectionSchurDiagBlockVDFF.cpp  testDoubleSectionSchurDiagBlockVFDD.cpp  testDoubleSectionSchurDiagBlockVFDF.cpp  testDoubleSectionSchurDiagBlockVFFD.cpp  testDoubleSectionSchurDiagBlockVFFF.cpp  testDoubleSectionSchurDiagBlockVVDD.cpp  (+55 more)
